--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ $(document).ready(function () {
 <div class="row3">
 <div class="column3" style="height: 190px; max-height: 190px; width: 275px; max-width: 275px; border: 1px solid grey; overflow: hidden;">
 <div style="height: 190px; max-height: 190px; width: 275px; max-width: 275px; position: relative;">
-<p><a href="01-workshop_tidy.html"> <img src="images/space_dog.gif" width="280" style="width: 275px; max-width: 275px;"> </a></p>
+<p><a href="https://mpca-air.github.io/RCamp/01-workshop_tidy.html"> <img src="images/space_dog.gif" width="280" style="width: 275px; max-width: 275px;"> </a></p>
 </div>
 </div>
 </div>
