--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ $(document).ready(function () {
 <p><a href="02_Day2_dplyr_ggplot_part0.html"><img src="images/day2_bb8_sq.png"></a></p>
 </div>
 <div class="column3" style="border: 1px solid grey; height: 270px; max-height: 270px;">
-<p><a href="03-Day3_your_turn.html"><img src="images/day3_sq.png"></a></p>
+<p><a href=""><img src="images/day3_sq.png"></a></p>
 </div>
 </div>
 <div class="row3" style="margin-top: 30px;">
