--- a/00-Day1_intro.html
+++ b/00-Day1_intro.html
@@ -11,7 +11,7 @@
 
 
 
-<title>R Training| Intro</title>
+<title>R Training | Intro</title>
 
 <script src="00-Day1_intro_files/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -150,7 +150,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">R Training| Intro</h1>
+<h1 class="title toc-ignore">R Training | Intro</h1>
 
 </div>
 
@@ -169,25 +169,26 @@ $(document).ready(function () {
 <li>Select <code>Remote Desktop Connection</code></li>
 <li>Enter <code>w7-your7digit#</code> or <code>R32-your7digit#</code></li>
 <li>Press <em>Connect</em></li>
+<li>Open RStudio</li>
 <li>Relax…</li>
 </ul>
-<p><br><br></p>
+<p><br><br><br><br><br><br><br> <br><br><br></p>
 </div>
 <div id="good-morning-empire-minions" class="section level1">
-<h1>Good morning <em>Empire minions</em>!</h1>
+<h1>Good morning <em>Empire minions!</em></h1>
 <hr>
 <div class="row3">
 <div class="column4" style="border: 0px solid grey;">
 <p><img src="images/barbara.png" height="220" width="200"></a></p>
 </div>
 <div class="column4" style="border: 0px solid grey;">
-<p><img src="images/kristie.jpeg" height="220" width="200"></a></p>
+<p><img src="images/kristie.jpeg" height="240" width="200"></a></p>
 </div>
 <div class="column4" style="border: 0px solid grey;">
 <p><img src="images/dorian.jpg" height="220" width="200"></a></p>
 </div>
 <div class="column4" style="border: 0px solid grey;">
-<p><img src="images/derek.jpg" height="220" width="200"></a></p>
+<p><img src="images/derek.jpg" height="200" width="200"></a></p>
 </div>
 </div>
 <p><br></p>
@@ -212,7 +213,7 @@ $(document).ready(function () {
 
 </div>
 <blockquote>
-<p><strong>A:</strong> <em>Adobe Wan Kenobi?</em></p>
+<p><strong>A:</strong> <em>Adobe Wan Kenobi</em></p>
 </blockquote>
 <p><br></p>
 </div>
