add Day 1 project download

--- a/02_Day2_dplyr_ggplot_part0.html
+++ b/02_Day2_dplyr_ggplot_part0.html
@@ -254,7 +254,7 @@ div.tocify {
 
 
 <div id="good-morning-young-jedis" class="section level2 unnumbered">
-<h2>Good morning young Jedis!</h2>
+<h2>Good morning, young Jedis!</h2>
 <hr>
 <div class="figure">
 <img src="images/day2_bb8_sq.png" style="float: left; margin-right: 60px; margin-top: -10px;" width="260" />
@@ -275,9 +275,22 @@ div.tocify {
 <li>Double click the <strong>.Rproj</strong> file to open RStudio</li>
 <li>Relax…</li>
 </ul>
+<p><br></p>
+<details><summary class = "btn_code"> <strong>Don’t have a project yet?</strong> </summary>
+<p>
+<p><a href="https://github.com/MPCA-air/RTrain/blob/master/data/junk_data.zip?raw=true"> <span class="btn btn-info"> <strong>DOWNLOAD</strong> </span></a> — The Day 1 project files</p>
+<ul>
+<li><strong>Copy</strong> the “junk_data” folder to your Desktop</li>
+<li><strong>Open</strong> the folder</li>
+<li>Double click the <strong>.Rproj</strong> file to open RStudio</li>
+</ul>
+<p><br></p>
+<hr>
+</p>
+<p></details></p>
 </div>
-<div id="day2-schedule" class="section level2 unnumbered">
-<h2>Day2 schedule</h2>
+<div id="day-2-schedule" class="section level2 unnumbered">
+<h2>Day 2 schedule</h2>
 <ol style="list-style-type: decimal">
 <li>Data transformations
 <ul>
