--- a/03_Day3.html
+++ b/03_Day3.html
@@ -645,18 +645,16 @@ where_to_save_it &lt;-<span class="st"> &quot;___.png&quot;</span>
 <div id="your-turn" class="section level1">
 <h1><span class="header-section-number">6</span> | Your turn</h1>
 <hr>
-<div id="working-your-way-up" class="section level2 unnumbered">
-<h2>Working your way up</h2>
-<p>Let’s start applying what we’ve learned to new data. When you’re ready to earn Grand Molf status, explore some of your own data to create a summary from scratch.</p>
+<p>Let’s start applying what we’ve learned. Choose one of the paths below to put your new hard-earned R skills to use. When you’re feeling ready, choose the Grand Moff path and begin exploring some of your own data.</p>
 <div class="row3" style="margin-top: 20px;">
 <div class="column3">
-<span style="margin-left: 0;"> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <strong>ENSIGN</strong> </span>
+<span style="margin-left: 0;"> <a href="Example_Data_ensign_level.html"> <strong>ENSIGN</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
 </div>
 <div class="column3">
-<span style="margin-left: 0;"> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <strong>COMMODORE</strong> </span>
+<span style="margin-left: 0;"> <a href="porg_exposure.html"> <strong>COMMODORE</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
 </div>
 <div class="column3">
-<span style="margin-left: 0;"><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <strong>GRAND MOFF</strong> </span>
+<span style="margin-left: 0;"> <a href="example_outline.html"> <strong>GRAND MOFF</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
 </div>
 </div>
 <div class="row3">
@@ -688,7 +686,6 @@ Planet: <code>Earth</code></p>
 </div>
 </div>
 <p><br></p>
-</div>
 </div>
 <div id="return-to-rcamp" class="section level1 unnumbered">
 <h1>Return to <a href="index.html">RCamp</a></h1>
