fix question bullets

--- a/03_Day3.html
+++ b/03_Day3.html
@@ -606,7 +606,7 @@ where_to_save_it &lt;-<span class="st"> &quot;___.png&quot;</span>
 </div>
 <div id="questions" class="section level1">
 <h1><span class="header-section-number">5</span> | Questions</h1>
-<div style="font-size: 15px;">
+<div style="font-size: 16px;">
 <ul>
 <li>How to modify the gridlines behind your chart?
 <ul>
@@ -627,7 +627,10 @@ where_to_save_it &lt;-<span class="st"> &quot;___.png&quot;</span>
 <li>I only like dashed lines. How do you change the linetype to a <em>dashed</em> line?
 <ul>
 <li><code>geom_line(aes(color = facility_name), linetype = &quot;dashed&quot;)</code></li>
-<li>You should also try <code>&quot;dotted&quot;</code> and <code>&quot;dotdash&quot;</code>, or maybe<code>&quot;twodash&quot;</code> if you really want to go wild. -How many colors are there in R? How does R know <code>hotpink</code> is a color?</li>
+<li>You should also try <code>&quot;dotted&quot;</code> and <code>&quot;dotdash&quot;</code>, or maybe<code>&quot;twodash&quot;</code></li>
+</ul></li>
+<li>How many colors are there in R? How does R know <code>hotpink</code> is a color?
+<ul>
 <li>There is an R color cheatsheet: <a href="https://www.nceas.ucsb.edu/~frazier/RSpatialGuides/colorPaletteCheatsheet.pdf" class="uri">https://www.nceas.ucsb.edu/~frazier/RSpatialGuides/colorPaletteCheatsheet.pdf</a></li>
 <li>As well as some basic color names here: <a href="http://www.r-graph-gallery.com/42-colors-names/" class="uri">http://www.r-graph-gallery.com/42-colors-names/</a></li>
 <li><code>library(viridis)</code> provides some great default color palettes for charts and maps.</li>
@@ -640,7 +643,6 @@ where_to_save_it &lt;-<span class="st"> &quot;___.png&quot;</span>
 </ul></li>
 </ul>
 </div>
-<p><br></p>
 </div>
 <div id="your-turn" class="section level1">
 <h1><span class="header-section-number">6</span> | Your turn</h1>
@@ -648,13 +650,13 @@ where_to_save_it &lt;-<span class="st"> &quot;___.png&quot;</span>
 <p>Let’s start applying what we’ve learned. Choose one of the paths below to put your new hard-earned R skills to use. When you’re feeling ready, choose the Grand Moff path and begin exploring some of your own data.</p>
 <div class="row3" style="margin-top: 20px;">
 <div class="column3">
-<span style="margin-left: 0;"> <a href="Example_Data_ensign_level.html"> <strong>ENSIGN</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
+<span style="margin-left: 2px;"> <a href="Example_Data_ensign_level.html"> <strong>ENSIGN</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
 </div>
 <div class="column3">
-<span style="margin-left: 0;"> <a href="porg_exposure.html"> <strong>COMMODORE</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
+<span style="margin-left: 2px;"> <a href="porg_exposure.html"> <strong>COMMODORE</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
 </div>
 <div class="column3">
-<span style="margin-left: 0;"> <a href="example_outline.html"> <strong>GRAND MOFF</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
+<span style="margin-left: 2px;"> <a href="example_outline.html"> <strong>GRAND MOFF</strong> </a><i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> <i class="fa fa-star" aria-hidden="true" style="color: #fa970c;"></i> </span>
 </div>
 </div>
 <div class="row3">
