--- a/help.html
+++ b/help.html
@@ -285,12 +285,14 @@ $(document).ready(function () {
 </ul>
 <p><strong>E-mail</strong></p>
 <ul>
-<li>Post a question on the <a href="https://github.com/mpca-air/R-questions">MPCA R-questions</a><br />
+<li>Post a question to MPCA’s <a href="https://github.com/mpca-air/R-questions">R-questions</a><br />
 </li>
 <li>Ask us!
 <ul>
 <li>Kristie Ellickson <a href="mailto:kristie.ellickson@state.mn.us?Subject=I%20have%20a%20R%20question">✉️</a></li>
+<li>Barbara Monaco <a href="mailto:Barbara.Monaco@state.mn.us?Subject=I%20have%20a%20R%20question">✉️</a></li>
 <li>Dorian Kvale <a href="mailto:dorian.kvale@state.mn.us?Subject=I%20have%20a%20R%20question">✉️</a></li>
+<li>Derek Nagel <a href="mailto:Derek.Nagel@state.mn.us?Subject=I%20have%20a%20R%20question">✉️</a></li>
 </ul></li>
 </ul>
 <div id="troubleshooting" class="section level2">
