--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ $(document).ready(function () {
 <div class="row3" style="margin-top: 30px;">
 <div class="column3-txt">
 <ol style="list-style-type: decimal">
-<li>Become a a young Jedi scrap scavenger</li>
+<li>Become a Jedi scrap scavenger</li>
 <li><strong>Project</strong> launch
 <ul>
 <li>Create a new project and R script</li>
@@ -229,7 +229,6 @@ $(document).ready(function () {
 <li><strong>Read data</strong> into R
 <ul>
 <li>Arrange, select and <strong>filter</strong> data</li>
-<li>Look for errors and outliers</li>
 </ul></li>
 <li>Plot the data!</li>
 </ol>
