--- a/index.html
+++ b/index.html
@@ -184,16 +184,11 @@ $(document).ready(function () {
 <h2>Get R!</h2>
 <hr>
 <p>Go to — <a href="https://itep-r.netlify.com/page/install.html">Install R</a> — to get the latest version of R and RStudio.</p>
-<p><br></p>
-<div id="updates" class="section level4">
-<h4>Updates</h4>
-<p>Go to — <a href="https://itep-r.netlify.com/page/install.html#update-r">Update R</a> — if you already have R but haven’t used it in awhile.</p>
-</div>
 </div>
 <div id="intro-to-r" class="section level2">
 <h2>Intro to R</h2>
 <hr>
-<p>This series teaches the basics of importing data, using new packages, cleaning and summarizing data with <strong>tidy</strong> tools, and using <code>ggplot2</code> to make charts, maps and other data visualizations.</p>
+<p>This series of workshops teaches the basics of importing data, using new packages, cleaning and summarizing data with <strong>tidy</strong> tools, and using <code>ggplot2</code> to create charts, maps and other data visualizations.</p>
 <div class="row3" style="margin-top: 20px;">
 <div class="column3">
 <a href="01-Day1.html"><span style="margin-left: 32%;"><i class="fa fa-star" aria-hidden="true" style="color: #f17405;"></i> <strong>Day 1</strong> <i class="fa fa-star" aria-hidden="true" style="color: #f17405;"></i></span></a>
